# rust-axum2

./: Cargo.toml  README.md  index.html
examples/: quick_dev.rs
src/: config.rs  error.rs  main.rs
src/ctx/: mod.rs
src/log/: mod.rs
src/model/: mod.rs
src/web/: mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_static.rs  routes_tickets.rs
