[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust Axum Full Course code."
homepage = "https://www.youtube.com/watch?v=3cA_mk4vdWY&t=11s"
repository = "https://github.com/rust10x/rust-web-app"

[dependencies]
tokio = { version = "1", features = ["full"] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Axum
axum = "0.6.16"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# Others
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"] }
# tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# DB
sqlx = { version = "0.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
] }


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
